# WRIVON

./: .env.local.example  .gitignore  BENCHMARK.md  README.md  benchmark.js  package.json  wrivon.config.json
.github/workflows/: ci.yml
examples/: config.json
media/: preview.html
node/: DESIGN.md  INSTALL.md  _wrivon_prompt_test.txt  test-runner.js
node/scripts/: env.ps1  env.sh  setup.js
node/src/: index.js
node/src/agent/: build.js  tools.js
node/src/config/: defaults.js  load.js  providers.js  shared.js
node/src/llm/: cloudflare.js  ollama.js
node/src/prompt/: init.md  review.md
node/src/repo/: map.js
node/src/skill/: discover.js  knowledge.js
node/src/tui/: render.js
node/src/util/: log.js  shell.js
python/: README.md  pyproject.toml
python/tests/: test_imports.py
python/wrivon/: __main__.py  cli.py  config.py  llm.py  provider.py  session.py  shared.py
python/wrivon/agent/: build.py  loop.py
python/wrivon/prompt/: system.md
python/wrivon/tools/: __init__.py  editor.py  search.py  shell.py  web.py
python/wrivon/ui/: render.py  repl.py
scripts/: env.ps1  install-skills.js  setup.js  smoke.js
src/: index.js
src/agent/: loop.js  tools.js
src/llm/: index.js  openai.js  stream.js
src/prompt/: system.md
src/session/: store.js
src/skill/: discover.js  knowledge.js
src/skills/builtin/architecture/: SKILL.md
src/skills/builtin/compliance/: SKILL.md
src/skills/builtin/deep-research/: SKILL.md
src/skills/builtin/engineering/: SKILL.md
src/tools/: serve.js
src/tui/: render.js  repl.js
src/util/: fs.js
(+15 files in other folders)
